{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Tank",
            "id": "d51d6143-8ac0-47d7-8a17-a45ac2ed0370",
            "actions": [
                {
                    "name": "Fire",
                    "type": "Value",
                    "id": "6c4e71a0-42af-4a85-bc35-cbafcdfc68a7",
                    "expectedControlType": "Key",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Aim",
                    "type": "Button",
                    "id": "453b205f-3ab3-421a-a319-68ae58d56be5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "ecc11bf9-8c24-45af-846b-b815e0937c94",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotation",
                    "type": "Button",
                    "id": "efdc1d32-07c6-43c0-a22c-e0706a27d544",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeWeapon",
                    "type": "Button",
                    "id": "4fed3778-fef9-46ee-b948-c79c64997887",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e1b59986-0a72-408e-a342-1cddb0792e08",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1d6ecc27-d055-4a75-93e0-1b716d6d195f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "bd165165-e38a-46a8-99ff-dd6b008d9208",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "9d519320-978e-4422-95a8-06e5c4fddd8a",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "8d38d72c-8583-4226-8742-63c1c4ac6921",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "4edd518e-0474-4d0a-a798-40a6fce390ac",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "46f29cfa-1caf-45bf-ac19-72c2404e2ef8",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a5fa291e-fa9c-495b-9ac2-378fda8476e7",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "eb3ad069-5a4f-4495-9413-04ac8364f3a2",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "Scale(factor=0)",
                    "groups": "",
                    "action": "ChangeWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac55a9f5-57a9-433e-b632-bec6c95fa839",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "ChangeWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d96e549e-9aba-4050-9261-2ea3fcd0750b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "Scale(factor=2)",
                    "groups": "",
                    "action": "ChangeWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameManager",
            "id": "d038ad8f-8ec6-4a82-aa6f-3aad598024c6",
            "actions": [
                {
                    "name": "ReloadScene",
                    "type": "Button",
                    "id": "2f3868b1-cab1-4d5a-9689-c2630a2f19f4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0ccc2440-d8f1-45f1-9d85-8d31f3cb8b63",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReloadScene",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "keyboard and mouse",
            "bindingGroup": "keyboard and mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}